@startuml

title __STORAGE's Class Diagram__\n

  namespace com.kamshanski.blepositioning {
    namespace model {
      namespace storage {
        class com.kamshanski.blepositioning.model.storage.ComplexStorage {
            ~ fullSize : int
            ~ holder : ArrayListDouble
            ~ storages : ArrayList<double[]>
            ~ sum : double
            - tag : String
            + ComplexStorage()
            + clear()
            + completeRecording()
            + fullSize()
            + get()
            + getFullSizeAndMean()
            + getMean()
            + metaEquals()
            + name()
            + putItem()
            + size()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace model {
      namespace storage {
        class com.kamshanski.blepositioning.model.storage.Measurement {
            - rssis : HashMap<Beacon, double[]>
            - tempArray : HashMap<Beacon, LinkedList<Double>>
            + complete()
            + get()
            + getDimensions()
            + put()
            + setDimensions()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace model {
      namespace storage {
        class com.kamshanski.blepositioning.model.storage.NiceStorage {
            + filters : HashMap<Integer, FilterBunch>
            + lastPack : HashMap<Beacon, double[]>
            + maxLength : int
            + name : String
            + storage : LinkedHashMap<Beacon, LinkedList<double[]>>
            + NiceStorage()
            + add()
            + clearLast()
            + compute()
            + getLastPacks()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace model {
      namespace storage {
        class com.kamshanski.blepositioning.model.storage.PositioningStorage {
            - storage : LinkedList<Dimensions>
            + PositioningStorage()
            + forEach()
            + get()
            + getLast()
            + put()
            + size()
        }
      }
    }
  }
  

  com.kamshanski.blepositioning.model.storage.ComplexStorage o-- com.kamshanski.blepositioning.model.core.Beacon : beacon
  com.kamshanski.blepositioning.model.storage.ComplexStorage o-- com.kamshanski.blepositioning.model.methods.filters.FilterBunch : filter
  com.kamshanski.blepositioning.model.storage.ComplexStorage o-- com.kamshanski.blepositioning.model.core.MacAddress : mac
  com.kamshanski.blepositioning.model.storage.Measurement o-- com.kamshanski.blepositioning.model.core.Dimensions : dimensions
  com.kamshanski.blepositioning.model.storage.NiceStorage o-- com.kamshanski.blepositioning.model.methods.filters.FilterBunch : filterSample
  com.kamshanski.blepositioning.model.storage.PositioningStorage o-- com.kamshanski.blepositioning.model.core.Dimensions : lastPack
  com.kamshanski.blepositioning.model.storage.PositioningStorage o-- com.kamshanski.blepositioning.model.core.MacAddress : target


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
